# cancer

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  cancer-prevision.ipynb  data-preparation.ipynb  pyproject.toml  relatorio.txt
cancer_predict/: cancer-prevision.ipynb  data-preparation.ipynb  relatorio.txt
